# rime-moran

./: .gitignore  README-en.md  README.md  default.custom.yaml  default.yaml  make_dist.sh  make_simp_dist.sh  moran.chars.dict.yaml  moran.computer.dict.yaml  moran.custom.txt  moran.custom.yaml  moran.defaults.yaml  moran.english.dict.yaml  moran.english.schema.yaml  moran.essay.dict.yaml  moran.extended.dict.yaml  moran.fixed.dict.yaml  moran.fixed.schema.yaml  moran.genshin.dict.yaml  moran.hanyu.dict.yaml  moran.japanese.schema.yaml  moran.main.dict.yaml  moran.moe.dict.yaml  moran.priconne.dict.yaml  moran.schema.yaml  moran.thuocl.IT.dict.yaml  moran.thuocl.animal.dict.yaml  moran.thuocl.caijing.dict.yaml  moran.thuocl.car.dict.yaml  moran.thuocl.chengyu.dict.yaml  moran.thuocl.diming.dict.yaml  moran.thuocl.food.dict.yaml  moran.thuocl.law.dict.yaml  moran.thuocl.lishimingren.dict.yaml  moran.thuocl.medical.dict.yaml  moran.thuocl.poem.dict.yaml  moran.touhou.dict.yaml  moran.vtb.dict.yaml  moran.words.dict.yaml  moran.yaml  (+39 more)
tools/: .gitignore  Makefile  aabc.py  chaizi.txt  char_freq.py  charsfix.py  charsgen.py  check_fixed.py  dazhu.py  dedup.py  essay.py  essay_char.py  essaydb.py  flypyify.py  freq.csv  gen_chaifen_filter.py  gen_fixed.py  gen_zrmdb.py  hamsterUpload.py  loge.py  luna_chars.txt  luna_like.py  pinyingen.py  pyproject.toml  radical.py  radical.txt  readme.md  remove_invalid_chars.py  requirements.txt  resources.md  sanity_check.py  scale_weights.py  schemagen.py  sort_fixed.py  thuocl.py  update_compact_dicts.sh  weightfix.py  weightfix2.py  (+5 more)
(+52 files in other folders)
